# timeseries-generator

./: Makefile  README.md  pyproject.toml
src/timeseries_generator/: base_factor.py
