[project]
name = "timeseries-generator"
version = "0.1.0"
description = "Library for generating time series data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "twine>=6.1.0",
    "workalendar>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
