[project]
name = "timeseries-generator"
version = "0.1.0"
description = "Library for generating time series data"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Zhe Sun", email = "zhe.sun@nike.com"},
    { name = "Jaap Langemeijer"},
    { name = "Irfan Shah", email = "irfns@protonmail.com" }
]
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "twine>=6.1.0",
    "workalendar>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/base-14/timeseries-generator"
Issues = "https://github.com/base-14/timeseries-generator/issues"